@@ -6,6 +6,9 @@ http://svn.edgewall.org/repos/genshi/tags/0.5.0/
  * Added new markup transformation filter contributed by Alec Thomas. This
    provides gorgeous jQuery-inspired stream transformation capabilities based
    on XPath expressions.
+ * When using HTML or XHTML serialization, the `xml:lang` attribute is
+   automatically translated to the `lang` attribute which HTML user agents
+   understand.
 
 
 Version 0.4.2
